Version 4:  - Updated Plugins  - Requires Maven 3  - Maven profile for Sonatype